# uncertarray

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
src/uncertarray/: __init__.py  astropy_support.py  core.py  ops.py  reduction.py
tests/: test_astropy.py  test_core.py  test_reduction.py
